# msgpipe

./: .gitignore
nodejs/: README.md  package.json  tsconfig.json
nodejs/src/: main.ts
python/: README.md  pyproject.toml
python/msgpipe/: __init__.py
