[tool.poetry]
name = "msgpipe"
version = "0.1.1"
description = "Simple IPC worker request framework"
authors = ["Wilson Lin <pypi@wilsonl.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
